--- a/slides/slides_tidyverse/slides_tidyverse.html
+++ b/slides/slides_tidyverse/slides_tidyverse.html
@@ -1281,7 +1281,7 @@ ggplot() +
 iris %&gt;%
 ggplot() +
   geom_point(mapping = aes(x = Sepal.Length, y = Sepal.Width))+
-  theme_minimal()
+  theme_dark()
 ```
 
 &lt;img src="slides_tidyverse_files/figure-html/unnamed-chunk-53-1.png" width="55%" height="55%" style="display: block; margin: auto;" /&gt;
